--- a/frontend/src/components/Cohorts/Cohorts.css
+++ b/frontend/src/components/Cohorts/Cohorts.css
@@ -8,8 +8,8 @@
 }
 
 #chartEthnicity {
-  width: 900px;
-  margin: 38px;
+  width: 90%;
+  margin-top: 29px;
 }
 
 .back {
@@ -19,15 +19,6 @@
   margin-left: 10px;
   padding-right: 10px;
   padding-left: 10px;
-}
-
-.chartModule {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
 }
 
 .back:hover {
@@ -56,7 +47,7 @@
 }
 
 #chartFilteredEthnicity {
-  width: 700px !important;
+  width: 70vw !important;
   display: flex;
   align-items: center;
   justify-items: center;
@@ -64,7 +55,7 @@
 }
 
 #chartFilteredEthnicity2 {
-  width: 400px !important;
+  width: 40vw !important;
   height: 400px !important;
   display: flex;
   align-items: center;
@@ -80,8 +71,16 @@
   margin-top: 20px;
 }
 
+.graphsDiv h10 {
+  color: #df0a0a;
+  font-weight: 500;
+  margin-top: 32px;
+  margin-left: -29px;
+  font-size: 14px;
+}
+
 #chartFilteredDisease {
-  width: 700px !important;
+  width: 70vw !important;
   height: 700px !important;
   display: flex;
   align-items: center;
@@ -90,7 +89,7 @@
 }
 
 #chartFilteredDisease2 {
-  width: 400px !important;
+  width: 40vw !important;
   height: 400px !important;
   display: flex;
   align-items: center;
@@ -99,7 +98,7 @@
 }
 
 #chartGeo {
-  width: 500px;
+  width: 50vw;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 14px;
@@ -108,6 +107,115 @@
   align-items: center;
 }
 
+.tab-content {
+  display: none;
+}
+
+.tab:target .tab-content,
+.tab:last-of-type .tab-content {
+  display: block;
+}
+
+.tab:target ~ .tab:last-of-type .tab-content {
+  display: none;
+}
+
+.tabs * {
+  box-sizing: border-box;
+}
+
+.tab-container {
+  position: relative;
+  padding-top: var(--tabs-height); /* en esta zona colocaremos las pestañas */
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 0px;
+}
+#tab1 > a {
+  --tabs-position: 0;
+}
+#tab2 > a {
+  --tabs-position: 1;
+}
+#tab3 > a {
+  --tabs-position: 2;
+}
+#tab4 > a {
+  --tabs-position: 3;
+}
+#tab5 > a {
+  --tabs-position: 4;
+}
+#tab6 > a {
+  --tabs-position: 5;
+}
+#tab7 > a {
+  --tabs-position: 6;
+}
+#tab8 > a {
+  --tabs-position: 7;
+}
+#tab9 > a {
+  --tabs-position: 8;
+}
+.tab > a {
+  text-align: center;
+  position: absolute;
+  width: calc(var(--tabs-width));
+  height: calc(var(--tabs-height) + var(--tabs-border-size));
+  top: 0;
+  left: calc(
+    var(--tabs-width) * var(--tabs-position)
+  ); /* posición de cada pestaña */
+}
+:root {
+  --tabs-border-color: #abcdef;
+  --tabs-border-size: 3px;
+  --tabs-text-color: white;
+  --tabs-dark-color: #2768aa;
+  --tabs-lite-color: #adafc2;
+  --tabs-width: 150px;
+  --tabs-height: 60px;
+  font-size: 14px;
+  margin: 10px;
+}
+.tabs {
+  width: 100vw;
+  color: var(--tabs-text-color);
+}
+.tab-content {
+  background-color: var(--tabs-lite-color);
+  padding: 20px;
+  border: var(--tabs-border-size) solid var(--tabs-border-color);
+  border-radius: 0 0 10px 10px;
+  position: relative;
+  z-index: 100;
+}
+.tab > a {
+  background-color: var(--tabs-dark-color);
+  padding: 10px;
+  border: var(--tabs-border-size) solid var(--tabs-border-color);
+  border-radius: 10px 10px 0 0;
+  border-bottom: 0;
+}
+.tab:target > a,
+.tab:last-of-type > a {
+  background-color: var(--tabs-lite-color);
+  z-index: 200;
+}
+.tab:target ~ .tab:last-of-type > a {
+  background-color: var(--tabs-dark-color);
+  z-index: 0;
+}
+
+h2,
+p {
+  margin: 0;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
 .ethFilters {
   display: flex;
   margin-top: 31px;
@@ -214,9 +322,17 @@
 }
 
 #chartDiseases {
-  width: 1000px;
-  margin: 38px;
+  width: 100%;
   min-height: 300px !important;
+  margin-top: 29px;
+}
+
+.diseases{
+  width: 100%;
+}
+
+.ethnicity{
+  width: 100%;
 }
 
 h12 {
@@ -259,6 +375,7 @@ h12 {
   align-items: center;
   padding-left: 160px;
 }
+
 .chartModule {
   display: flex;
   flex-direction: column;
@@ -266,10 +383,6 @@ h12 {
   align-content: center;
   justify-content: center;
   align-items: center;
-}
-.apexcharts-menu {
-  background-color: #27293d !important;
-  border: 0px;
 }
 
 .middle {
@@ -320,7 +433,7 @@ h12 {
   }
   50% {
     transform: scaleY(1);
-    background: #8fed0b;
+    background: #34ce7e;
   }
   100% {
     transform: scaleY(0.1);
