--- a/frontend/src/components/CrossQueries/CrossQueries.css
+++ b/frontend/src/components/CrossQueries/CrossQueries.css
@@ -10,7 +10,7 @@
 
 select {
   background: white;
-  border: 2px solid #010a7d;
+  border: 2px solid #f3f4ff;
   font-size: medium;
   border-radius: 5px;
   width: 150px;
@@ -22,19 +22,23 @@ select {
 
 .inputId {
   background: white;
-  border: 2px solid #010a7d;
+  border: 2px solid #f3f4ff;
   font-size: medium;
   border-radius: 5px;
-  width: 150px;
+  width: 200px;
   margin-left: 10px;
-  height: 19px;
+  height: 22px;
   box-shadow: 1px 2px 2px #cecece;
-  cursor: pointer;
 }
 
 .divCrossQueries {
   display: flex;
+  flex-wrap: wrap;
+  align-content: center;
   justify-content: center;
+  align-items: center;
+  width: 100vw;
+  flex-direction: column;
 }
 
 .crossQueriesForm label {
@@ -45,7 +49,7 @@ select {
 .formButton {
   cursor: pointer;
   background: rgb(255 255 255);
-  border: 2px 2px 2px 0px solid #010a7d;
+  border: 2px 2px 2px 0px solid #f3f4ff;
   font-size: medium;
   border-radius: 5px;
   width: 100px;
@@ -54,29 +58,26 @@ select {
   margin-top: 30px;
 }
 
-
 .formButton:hover {
   background: #d4c223;
-  box-shadow: 1px 1px 1px 1px #d2cfcf;
+  box-shadow: 1px 1px 1px 1px #d4c223;
+  border: solid #d4c223;
 }
 
 h5 {
   color: rgb(209, 66, 66);
   font-weight: bold;
-  width: 150%;
+  width: fit-content;
+  /* width: 150%; */
   display: flex;
   /* align-items: center; */
-  justify-content: flex-start;
+  justify-content: center;
   font-size: 14px;
 }
 
 h5:hover {
   color: rgb(118, 151, 228);
   font-weight: bold;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .preCrossQueries {
@@ -88,4 +89,31 @@ h5:hover {
   background: #e5e5e5;
   color: black;
   padding: 20px;
+}
+
+@media (max-width: 800px) {
+  select {
+    font-size: 11px;
+    width: 104px;
+  }
+  .crossQueriesForm {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    margin-top: 40px;
+    margin: 10px;
+    /* margin-right: 30px; */
+    align-content: center;
+    align-items: flex-start;
+  }
+  .inputId {
+    background: white;
+    border: 2px solid #f3f4ff;
+    font-size: 12px;
+    border-radius: 5px;
+    width: 200px;
+    margin-left: 10px;
+    height: 22px;
+    box-shadow: 1px 2px 2px #cecece;
+  }
 }
